# phyly

./: .gitignore  README.md  autogen.sh  configure.ac
doc/: Felsenstein.2004.fig.16.4.md
examples/: death-process.json  dwell.plot.json  fig.16.4.deriv.json  fig.16.4.json  four.leaf.json  in.json  jukes-cantor.json  mesa.json  newt.py  opt.py  pandas-example.py  phyl-log-likelihood-test.py  poisson.json  simple.json  spikeproject.c  ts-tv-expect.py
examples/BEAST.AncestralState/: README.md  mktreefig.py
examples/BEAST.AncestralState/ll/: README.md  in.json  out.json
examples/BEAST.AncestralState/marginal/: README.md  in.json  out.json
examples/BEAST.GTR/: mknuc.py
examples/BEAST.GTRG/: README.md  mkmodel.py  out.json
examples/BEAST.GTRGI/: in.json  model.json
examples/BEAST.GTRI/: README.md  in.json  model.json
examples/BEAST.HKY85/: in.json  mkmodel.py  model.json
examples/BEAST.HKY85G/: README.md  out.json
examples/BEAST.HKY85I/: in.json  model.json  nuc.json  out.json
examples/BEAST.JC69/: mkmodel.py  mknuc.py  model.json  out.json
examples/BEAST.K80/: README.md  in.json  mkmodel.py  mknuc.py  out.json
examples/BEAST.MarkovJumps/MarkovJumpsC/: README.md  in.json  in.reordered.json  out.json  out.reordered.json
examples/BEAST.MarkovJumps/MarkovMarginalRate/: README.md  in.json  in.pedantic.json  out.json  out.pedantic.json
examples/BEAST.MarkovJumps/MarkovRewardsC/: README.md  in.json  out.json
examples/Felsenstein.2004.fig.16.4/: README.md  mktreefig.py
examples/Felsenstein.2004.fig.16.4/deriv/: README.md  out.json  out.md
examples/Felsenstein.2004.fig.16.4/dwell/adenine/: README.md  in.json  out.json  out.md
examples/Felsenstein.2004.fig.16.4/dwell/pyrimidines/: README.md  in.json  out.json  out.md
examples/Felsenstein.2004.fig.16.4/em-update/: README.md
examples/Felsenstein.2004.fig.16.4/em-update/with.full.data/: README.md  out.json  out.md
examples/Felsenstein.2004.fig.16.4/em-update/with.leaf.data/: README.md  in.json  out.json  out.md
examples/Felsenstein.2004.fig.16.4/em-update/with.no.data/: README.md  out.json  out.md
examples/Felsenstein.2004.fig.16.4/hess/: README.md  in.informative.json  in.simple.json  out.json  out.md
examples/Felsenstein.2004.fig.16.4/hess/with.full.data/: README.md  out.json  out.md
examples/Felsenstein.2004.fig.16.4/hess/with.leaf.data/: in.uninformative.json
examples/Felsenstein.2004.fig.16.4/ll/: in2.json  out.json  out2.md
examples/Felsenstein.2004.fig.16.4/log-likelihood/: README.md  in.json  in.prior.json  in.prior.sum.json  tab.py  table.md
examples/Felsenstein.2004.fig.16.4/marginal/: README.md  in.json  out.json  out.md
examples/Felsenstein.2004.fig.16.4/trans/: README.md  out.json
examples/GeLL.DNA/: README.md  in.json  mkjson.py  mkmodel.py  model.json
examples/GeLL.driver.DNA/: README.md  hacked.json  in.json  mkmodel.py  mknuc.py  model.json  nuc.json
examples/GeLL.test.likelihood/: README.md  in.json  mkmodel.py  mknuc.py  model.json  nuc.json
examples/JC.long.branch/: README.md  jc29.diff.json  jc29.same.json  jc30.diff.json  jc30.same.json  jc600.same.json  mktreefig.py
examples/JC.long.branch/deriv/: README.md  out.json
examples/JC.long.branch/dwell/: README.md  out.json
examples/JC.long.branch/ll/: README.md  in.json  out.json
examples/JC.long.branch/marginal/: README.md  in.json  out.json
examples/JC.long.branch/trans/: README.md  out.json
examples/Jukes.Cantor/: README.md  jc30.diff.json  jc30.same.json  jc600.same.json
examples/beast.likelihood/GTR/: README.md  in.json  mkmodel.py  model.json  out.json
examples/beast.likelihood/GTRG/: in.json  model.json
examples/beast.likelihood/GTRGI/: README.md  mkmodel.py  out.json
examples/beast.likelihood/GTRI/: mkmodel.py  out.json
examples/beast.likelihood/HKY85/: README.md  out.json  paup_empirical_prior.py
examples/beast.likelihood/HKY85G/: in.json  mkmodel.py  model.json
examples/beast.likelihood/HKY85I/: README.md  mkmodel.py
examples/beast.likelihood/JC69/: README.md  in.json  mkmodel.py  mknuc.py  model.json  nuc.json  out.json
examples/beast.likelihood/K80/: model.json
examples/bpp.phyl/: README.md  mktreefig.py
examples/bpp.phyl.likelihood/: in.json
examples/bpp.phyl/deriv/: README.md  in.json  out.json
examples/bpp.phyl/ll/: README.md  out.json
examples/mesa_section_4_2_4_poisson_aa/: opt.example.json  transform_data_mtmam.py
notes/: dev-notes.txt  potential-test-sources.txt
old-examples/: a-noindex.json  a.json  b.json  check-rate-em.py  dinh-example.py  dinh.json  dwell-time-plot.py  fig.16.4.json  gell_dna_opt.py  newt.py  opt.four.leaf.json  phyl-log-likelihood-test.py  phyl-test-failure.py  poisson.align.json  simple.json  ts-tv-expect.py
old-examples/mesa_section_4_2_4_poisson_aa/: example.json  opt2.example.json  transform_data.py
src/: Makefile.am  arb_mat_extras.c  arb_mat_extras.h  arb_vec_calc.c  arb_vec_calc.h  arb_vec_calc_quad.c  arb_vec_calc_quad.h  arb_vec_extras.c  arb_vec_extras.h  arbplf-coeff-expect.c  arbplf-deriv.c  arbplf-dwell.c  arbplf-em-update.c  arbplf-hess.c  arbplf-inv-hess.c  arbplf-ll.c  arbplf-marginal.c  arbplf-newton-delta.c  arbplf-newton-point.c  arbplf-newton-refine.c  arbplf-trans.c  arbplf.c  arbplf_ll.c  arbplf_ll.h  arbplfcoeffexpect.c  arbplfcoeffexpect.h  arbplfderiv.c  arbplfderiv.h  arbplfdwell.c  arbplfdwell.h  arbplfem.c  arbplfem.h  arbplfhess.c  arbplfhess.h  arbplfll.c  arbplfll.h  arbplfmarginal.c  arbplfmarginal.h  arbplftrans.c  arbplftrans.h  (+47 more)
src/scripts/: tabby
test_scripts/: test_args.py  test_bad_model_args.py  test_bad_reduction_args.py  test_dwell.py  test_em_monotonicity.py  test_gamma_discretization.py  test_gell_likelihood.py  test_ll.py  test_ll_deriv.py  test_ll_deriv_accuracy.py  test_ll_hessian_accuracy.py  test_marginal.py  test_marginal_no_change.py  test_ok_model_args.py  test_path.py  test_path_exponential_absorbing.py  test_rate_divisor.py  test_rate_mixture_vs_block.py  test_root_prior.py  test_site_weights.py  test_trans.py
tools/: tab.py
(+16 files in other folders)
